Frontend + version check

--- a/launcher/App.css
+++ b/launcher/App.css
@@ -1,13 +1,15 @@
 html{
   overflow: hidden;
+  height: 100%;
+  min-height: 600px;
+  min-width: 1000px;
 }
 body{
   height: 100%;
   width: 100%;
-  background: #acb6e5;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #86fde8, #acb6e5);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #86fde8, #acb6e5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+  background: rgb(32,32,32);
+  background: radial-gradient(circle, rgba(32,32,32,1) 0%, rgba(0,0,0,1) 99%);
+  color: #d1d1d1;
 }
 .carousel{
   max-height: 200px;
@@ -16,4 +18,43 @@ body{
 .d-block{
   height: 200px;
   width: auto;
+}
+.btn {
+  background-color: #00b490;
+  color: black;
+  font-weight: 600;
+}
+
+.btnSecondary{
+  background-color: #F97085;
+  color: black;
+  font-weight: 600;
+}
+.btnThird{
+  background-color: #00938F;
+  color: black;
+  font-weight: 600;
+}
+.bg-info {
+  background-color: #00b490!important;
+}
+.carousel-control-prev-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='#00b490' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
+}
+
+.carousel-control-next-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='#00b490' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
+}
+
+.carousel-indicators .active{
+  background-color: #00b490;
+}
+h3, h5{
+  font-family: 'K2D', sans-serif;
+}
+.form-control{
+  min-width: 320px;
+}
+.fab{
+  color: white;
 }
