mobile optimize launch page

--- a/launcher/src/css/launch.css
+++ b/launcher/src/css/launch.css
@@ -2,7 +2,9 @@
     color: white;
 }
 #Launch #howto{
-    background-color: #ffffff17;
+    background-color: #ffffff0f;
     height: 500px;
     padding: 20px;
+    border-radius: 5px;
+    overflow-y: 5px;
 }
